* Ajustes de layout. * Inclusão do Avatar

--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -1,3 +1,5 @@
 <footer>
-  <span>&copy; <%= site.year %> <strong class="text-primary"><%= site.title %></strong> by site oficial.</span>
+  <div class="container">
+    <span>&copy; <%= site.year %> <strong class="text-primary"><%= site.title %></strong> by site oficial.</span>
+  </div>
 </footer>
