--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -39,16 +39,30 @@ h1, h2, h3, h4, h5, h6 {
 
 .header {
   position: relative;
+  display: block;
+  background-color: #2980b9;
+}
+
+.header header {
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background-color: #2980b9;
-  /* background-image: linear-gradient(120deg, #2C3E50, #2980B9); */
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header h1, .brand {
   color: #fff;
   margin: 0;
+}
+
+.header h1 {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
 }
 
 .header nav > ul {
@@ -61,9 +75,16 @@ h1, h2, h3, h4, h5, h6 {
   list-style: none;
 }
 
+.header nav.main-menu > ul,
+.header nav.social-menu > ul {
+  margin: 0;
+  padding: 0;
+}
+
 .header nav.main-menu > ul li {
   padding: 20px;
 }
+
 .header nav.social-menu > ul li {
   padding: 5px;
 }
@@ -94,6 +115,77 @@ h1, h2, h3, h4, h5, h6 {
   font-style: italic;
 }
 
-.header, .content, .footer {
+.header {
+  padding: 5px 15px;
+}
+
+.content, .footer {
   padding: 15px 30px;
+}
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.my-avatar {
+  width: 48px;
+  height: auto;
+  border-radius: 32px;
+  border: 2px solid white;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.45);
+  margin-right: 15px;
+}
+
+@media (min-width: 576px) {
+  .header header,
+  .container {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .header header,
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (max-width: 768px) {
+  footer {
+    justify-content: center;
+  }
+
+  .header header {
+    flex-direction: column;
+    padding: 15px 5px;
+  }
+
+  .header header nav.main-menu > ul li {
+    padding: 15px;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 820px) {
+  .header header nav.main-menu > ul li {
+    padding: 15px;
+  }
+}
+
+@media (min-width: 992px) {
+  .header header,
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .header header,
+  .container {
+    max-width: 1140px;
+  }
 }
