--- a/src/layouts/default.ejs
+++ b/src/layouts/default.ejs
@@ -13,10 +13,11 @@
       <%- include('partials/header') %>
     </div>
 
-    <div class="content">
+    <div class="content container">
       <%- body %>
     </div>
 
     <%- include('partials/footer') %>
+    <script src="js/app.js"></script>
   </body>
 </html>
