--- a/src/layouts/default.ejs
+++ b/src/layouts/default.ejs
@@ -18,6 +18,9 @@
     </div>
 
     <%- include('partials/footer') %>
-    <script src="js/app.js"></script>
+    <script src="/js/app.js"></script>
+    <script>
+      setActiveLink();
+    </script>
   </body>
 </html>
