--- a/src/partials/header.ejs
+++ b/src/partials/header.ejs
@@ -1,7 +1,7 @@
 <header>
   <div class="brand">
     <h1>
-      <img src="img/felipeassis.jpg" alt="Avatar" class="my-avatar">
+      <img src="/img/felipeassis.jpg" alt="Avatar" class="my-avatar">
       <%= site.title %>
     </h1>
   </div>
